--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>SAHAR FARZANEH</h1>
-					<p>Musician</p>
+					<p>Guitarist</p>
 				</header>
 				<div class="container">
 					<ul class="actions special">
